--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
+    "material-ui-chip-input": "^0.12.0",
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
