--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "admin-on-rest": "^0.7.0",
-    "custom-react-scripts": "0.0.21"
+    "custom-react-scripts": "0.0.21",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
