--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "redux-form": "^6.4.3",
+    "redux-form": "~6.2.0",
     "redux-saga": "^0.14.2"
   },
   "scripts": {
