--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-dropzone": "^3.7.0",
     "react-redux": "^5.0.2",
     "react-router": "^2.8.1",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "redux": "^3.6.0",
     "redux-form": "~6.2.0",
     "redux-saga": "^0.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
